Adding first unit test
Also adding the structure for tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm i && mocha tests/**/*.test.js"
+    "test": "mocha tests/**/*.test.js"
   },
   "keywords": [
     "debouncer"
